--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,9 +1,9 @@
 modLoader="javafml" #mandatory
-loaderVersion="[35,)" #mandatory
+loaderVersion="[31,)" #mandatory
 license="MIT Licence"
 [[mods]] #mandatory
 modId="goodmorning" #mandatory
-version="1.16.4-1.0" #mandatory
+version="1.15.2-1.0" #mandatory
 displayName="Good Morning" #mandatory
 #logoFile="examplemod.png" #optional
 authors="SQwatermark" #optional
@@ -14,13 +14,13 @@ Show title on player wake up.
 [[dependencies.goodmorning]] #optional
     modId="forge" #mandatory
     mandatory=true #mandatory
-    versionRange="[35,)" #mandatory
+    versionRange="[31,)" #mandatory
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.goodmorning]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16.4,1.17)"
+    versionRange="[1.15.2]"
     ordering="NONE"
     side="BOTH"
