--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,14 @@ minecraft {
     mappings = "stable_39"
 }
 
-dependencies {
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
 
+dependencies {
+    deobfCompile('com:somnia-1.10')
 }
 
 processResources {
