--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -3,7 +3,7 @@ loaderVersion="[37,)" #mandatory
 license="MIT Licence"
 [[mods]] #mandatory
 modId="goodmorning" #mandatory
-version="1.17.1-1.0" #mandatory
+version="1.18.2-1.0" #mandatory
 displayName="Good Morning" #mandatory
 #logoFile="examplemod.png" #optional
 authors="SQwatermark" #optional
@@ -14,13 +14,13 @@ Show title on player wake up.
 [[dependencies.goodmorning]] #optional
     modId="forge" #mandatory
     mandatory=true #mandatory
-    versionRange="[37,)" #mandatory
+    versionRange="[40,)" #mandatory
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.goodmorning]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.17.1,1.18)"
+    versionRange = "[1.18.2,)"
     ordering="NONE"
     side="BOTH"
